Update tabContent Product
- Perubahan tabContent menu product
- Membuat backup data products sebelumnya

--- a/Product/backup/coba.html
+++ b/Product/backup/coba.html
@@ -1,80 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product</title>
-    <link rel="stylesheet" href="Product/ProductStyle.css">
-    <link rel="icon" href="Asset/Logo.png" type="image/x-icon">
-</head>
-
-<body>  
-    <!-- NavBar Start -->
-    <header>
-        <!-- insert logo -->
-        <a href="#" class="logo">
-            <img src="Asset/Logo.png" alt="logo">
-        </a>
-
-        <!-- menu icon -->
-        <i class="menu" id="menu-icon"><img src="Asset/menu.svg" alt=""></i>
-
-        <!-- navbar links -->
-        <ul class="navbar">
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="AboutUs.html">About Us</a></li>
-            <li class="active_nav"><a href="Product.html">Product</a></li>
-        </ul>
-    </header>
-        <!-- NavBar END -->
-
-    <!-- Section Description "What is TeavoU?" START -->
-   <section class="desc" id="desc">
-        <div class="grid">
-            <div class="column">
-                <div class="column-1">
-                    <div class="image-1">
-                        <img src="Asset/product img 1.png" alt="">
-                    </div> 
-                    <div class="image-2">
-                        <img src="Asset/product img 2.png" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="column-2">
-                    <div class="image-3">
-                        <img src="Asset/product img 3.png" alt="">
-                    </div>   
-                    <div class="image-4">
-                         <img src="Asset/product img 4.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="desc-text">
-            <h2>What is <span><br>TeavoU?</span></h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
-        </div>
-        <div class="desc-more">
-            <button>More</button>
-        </div>
-
-        <!-- 3 buttons navigate on product page -->
-        <div class="buttons">
-            <button class="but"><img src="Asset/image deskripsi teh.svg" alt="">What is TeavoU?</button>
-            <button class="but"><img src="Asset/image sejarah tea.svg" alt="">History of Tea</button>
-            <button class="but"><img src="Asset/image khasiat tea.svg" alt="">TeavoU Product</button>
-        </div>
-   </section>
-    <!-- Section Description "What is TeavoU?" END -->
-
-   <!-- Section TeavoU Product START-->
-   <section class="product" id="product">
-        <div class="product-text">
-            <h2><span>TeavoU</span>: True Pleasure</h2>
-        </div>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="Product/coba.css">
+        <script src="Product/coba.js"></script>
+    </head>
+    <body>
         <!-- product buttons -->
         <div class="tab">
             <button class="tablinks" onclick="openCity(event, 'OriginTea')">OriginTea</button>
@@ -299,35 +232,5 @@
                 <button class="read" onclick="expandText(this)">Read More</button>
             </div>
         </div>
-
-        <!-- Feedback -->
-        <div class="feedback">
-            <p>Give us your feedback on our products</p><br>
-            <div class="form">
-                <form action="" name="feedback-form">
-                    <div class="input-feedback">
-                        <input type="text" name="Type here ..." placeholder="Type here ...">
-                        <input type="submit" value="submit">
-                    </div>
-                </form>
-            </div>
-            <div class="star-rating">
-                <button class="star">&#9734;</button>
-                <button class="star">&#9734;</button>
-                <button class="star">&#9734;</button>
-                <button class="star">&#9734;</button>
-                <button class="star">&#9734;</button>
-            </div>
-        </div>
-   </section>
-   <!-- Section TeavoU Product END-->
-
-   <!-- Section Footer START -->
-   <!-- Section Footer END -->
-
-
-
-   <!-- Link Product JS -->
-   <script src="Product/ProductJS.js"></script>
-</body>
+    </body>
 </html>
