Update Team Foto

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -89,9 +89,9 @@
                 <h3>Value in <span>TeavoU</span></h3>
                 
                 <ol>
-                    <li><span class="number1">1</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li><span class="number2">2</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li><span class="number1">3</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li><span class="numberganjil">1</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li><span class="numbergenap">2</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li><span class="numberganjil">3</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                 </ol>  
             </div>
         </div>
@@ -102,17 +102,17 @@
     <section class="TeavoUTeam" id="TeavoUTeam">
         <h4><span>TeavoU</span> Team</h4>
         <div class="TeavoUTeamcard">
-            <div><img src="Asset/team rifqi.png" alt="">Lorem ipsum
+            <div><img src="Asset/team azzizah.png" alt="">Nur Azzizah
             </div>
             <div><img src="Asset/team fadhel.png" alt="">Akhmad Fadhel
             </div>
-            <div><img src="Asset/team rifqi.png" alt="">Lorem ipsum
+            <div><img src="Asset/team nisrina.png" alt="">Nisrina Nurhasna
             </div>
             <div><img src="Asset/team diah.png" alt="">I Gusti Agung Diah<br>Arishma Okayani
             </div>
             <div><img src="Asset/team rifqi.png" alt="">Rifqi Nur Permadi
             </div>
-            <div><img src="Asset/team rifqi.png" alt="">Lorem ipsum
+            <div><img src="Asset/team balqis.png" alt="">Balqis Ramadhillah
             </div>
         </div>
     </section>
