Update Page Products
- Perubahan margin dan coloring font pada "True Pleasure"

--- a/Product.html
+++ b/Product.html
@@ -21,7 +21,7 @@
 
         <!-- navbar links -->
         <ul class="navbar">
-            <li><a href="Home.html">Home</a></li>
+            <li><a href="Index.html">Home</a></li>
             <li><a href="AboutUs.html">About Us</a></li>
             <li class="active_nav"><a href="Product.html">Product</a></li>
         </ul>
@@ -77,9 +77,9 @@
 
         <!-- product buttons -->
         <div class="tab">
-            <button class="tablinks" onclick="openCity(event, 'OriginTea')">OriginTea</button>
-            <button class="tablinks" onclick="openCity(event, 'SweeTea')">SweeTea</button>
-            <button class="tablinks" onclick="openCity(event, 'Tisane')">Tisane</button>
+            <button class="tablinks" onclick="openMenu(event, 'OriginTea')">OriginTea</button>
+            <button class="tablinks" onclick="openMenu(event, 'SweeTea')">SweeTea</button>
+            <button class="tablinks" onclick="openMenu(event, 'Tisane')">Tisane</button>
         </div>
 
         <!-- TeavoU Product or Menu-->
@@ -299,27 +299,30 @@
                 <button class="read" onclick="expandText(this)">Read More</button>
             </div>
         </div>
+    </section>
 
-        <!-- Feedback -->
-        <div class="feedback">
-            <p>Give us your feedback on our products</p><br>
-            <div class="form">
-                <form action="" name="feedback-form">
-                    <div class="input-feedback">
-                        <input type="text" name="Type here ..." placeholder="Type here ...">
-                        <input type="submit" value="submit">
-                    </div>
-                </form>
-            </div>
-            <div class="star-rating">
-                <button class="star">&#9734;</button>
-                <button class="star">&#9734;</button>
-                <button class="star">&#9734;</button>
-                <button class="star">&#9734;</button>
-                <button class="star">&#9734;</button>
-            </div>
+    <!-- Feedback -->
+    <section class="feedback">
+        <p>Give us your feedback on our products</p><br>
+        <div class="form">
+            <form action="" name="feedback-form">
+                <div class="input-feedback">
+                    <input type="text" name="Type here ..." placeholder="Type here ...">
+                    <input type="submit" value="submit">
+                </div>
+            </form>
         </div>
-   </section>
+        <div class="star-rating">
+            <button class="star">&#9734;</button>
+            <button class="star">&#9734;</button>
+            <button class="star">&#9734;</button>
+            <button class="star">&#9734;</button>
+            <button class="star">&#9734;</button>
+        </div>
+    </section>
+    
+        </div>
+   
    <!-- Section TeavoU Product END-->
 
    <!-- Section Footer START -->
