Update Feedback (Product)

--- a/Product.html
+++ b/Product.html
@@ -303,12 +303,14 @@
 
     <!-- Feedback -->
     <section class="feedback">
-        <p>Give us your feedback on our products</p><br>
+        <div class="feedback-header">
+            <p>Give us your feedback on our products</p><br>
+        </div>
         <div class="form">
             <form action="" name="feedback-form">
                 <div class="input-feedback">
                     <input type="text" name="Type here ..." placeholder="Type here ...">
-                    <input type="submit" value="submit">
+                    <input type="submit" value="Submit">
                 </div>
             </form>
         </div>
