About Us Gallery Update

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -119,21 +119,66 @@
     <!-- Section TevoUTeam End -->
 
     <!-- Section Tevou Gallery Start -->
-    <section class="TeavoUGallery" id="TeavoUGallery">
-        <div class="column">
-            <div class="TeavoUGallerycard">
-                <h4>TeavoU <span>Gallery</span></h4>
-                <div class="TeavoUGallery-img">
-                    <img src="Asset/Galeryabout 1.png" alt="">
+    <section class="galleryTeam" id="galleryTeam">
+        <div class="galleryTeam-text">
+            <h2><span>TeavoU</span> Gallery</h2>
+        </div>
+        
+        <div class="showSlide_galleryTeam">
+            <!-- SLIDE 1 -->
+            <div class="slide_galleryTeam">
+                <div class="card-body">
+                    <img src="Asset/Galeryabout 1.png" alt="Image 1">
                 </div>
-                <div class="TeavoUGallery-img">
-                    <img src="Asset/Galeryabout 2.png" alt="">
+
+                <div class="card-body">
+                    <img src="Asset/Galeryabout 1.png" alt="Image 1">
                 </div>
-                <div class="TeavoUGallery-img">
-                    <img src="Asset/Galeryabout 3.png" alt="">
+
+                <div class="card-body">
+                    <img src="Asset/Galeryabout 1.png" alt="Image 1">
+                </div>
+            </div>
+
+            <!-- SLIDE 2 -->
+            <div class="slide_galleryTeam">
+                <div class="card-body">
+                    <img src="Asset/Galeryabout 2.png" alt="Image 1">
+                </div>
+
+                <div class="card-body">
+                    <img src="Asset/Galeryabout 2.png" alt="Image 1">
+                </div>
+
+                <div class="card-body">
+                    <img src="Asset/Galeryabout 2.png" alt="Image 1">
+                </div>
+            </div>
+
+            <!-- SLIDE 3 -->
+            <div class="slide_galleryTeam">
+                <div class="card-body">
+                    <img src="Asset/Galeryabout 3.png" alt="Image 1">
+                </div>
+                
+                <div class="card-body">
+                    <img src="Asset/Galeryabout 3.png" alt="Image 1">
+                </div>
+
+                <div class="card-body">
+                    <img src="Asset/Galeryabout 3.png" alt="Image 1">
                 </div>
             </div>
         </div>
+
+        <div class="dots_galleryTeam">
+            <span class="dot_galleryTeam"></span>
+            <span class="dot_galleryTeam"></span>
+            <span class="dot_galleryTeam"></span>
+        </div>
     </section>
+
+    <!-- Link JS -->
+    <script src="About Us/AboutUsJS.js"></script>
 </body>
 </html>
