--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,7 @@
 
     <!-- Best Seller -->
     <section class="best-product">
-        <div class="best-text">
+        <div class="text-best">
             <h2>Products Best Seller</h2>
         </div>
 
@@ -278,9 +278,22 @@
         <div class="element-fo">
             <!-- alamat -->
             <div class="alamat">
-                <!-- <img src="Asset/Vector (1).svg" alt=""> -->
+                <img src="Asset/map.svg" alt="">
                 <h5>Jl.Cenderawasih No3, Mrican Caturtunggal</h5>
             </div>
+
+            <!-- email -->
+            <div class="email">
+                <img src="Asset/mail.svg" alt="">
+                <h5>teavou@gmail.com</h5>
+            </div>
+
+            <!-- call -->
+            <div class="call">
+                <img src="Asset/Vector.svg" alt="">
+                <h5>(355) 973-9235</h5>
+            </div>
+        </div>
 
             <!-- Line navbar -->
         <div class="line"></div>
@@ -289,20 +302,6 @@
                 <li><a href="AboutUs.html">AboutUs</a></li>
                 <li><a href="Product.html">Product</a></li>
             </ul>
-        
-
-        
-            <div class="email">
-                <!-- logo email -->
-                <h5>teavou@gmail.com</h5>
-            </div>
-
-            <!-- call -->
-            <div class="call">
-                <!-- logo call -->
-                <h5>(355) 973-9235</h5>
-            </div>
-        </div>
 
         <!-- social media -->
         <div class="social">
