--- a/Product.html
+++ b/Product.html
@@ -69,168 +69,168 @@
    </section>
     <!-- Section Description "What is TeavoU?" END -->
 
-   <!-- Section TeavoU Product START-->
-   <section class="product" id="product">
-        <div class="product-text">
-            <h2><span>TeavoU</span>: True Pleasure</h2>
+<!-- Section TeavoU Product START-->
+<section class="product" id="product">
+    <div class="product-text">
+        <h2><span>TeavoU</span>: True Pleasure</h2>
+    </div>
+
+    <!-- product buttons -->
+    <div class="tab">
+        <button class="tablinks" onclick="openMenu(event, 'OriginTea')">OriginTea</button>
+        <button class="tablinks" onclick="openMenu(event, 'SweeTea')">SweeTea</button>
+        <button class="tablinks" onclick="openMenu(event, 'Tisane')">Tisane</button>
+    </div>
+
+    <!-- TeavoU Product or Menu-->
+    <!-- MENU ORIGINTEA -->
+    <div class="menu" id="OriginTeaMenu">
+        <div id="OriginTea" class="tabcontent">
+            <img src="Asset/greentea.png" alt="">
+            <h5>Green Tea</h5>
+            <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
+            <button class="read" onclick="expandText(this)">Read More</button>
         </div>
 
-        <!-- product buttons -->
-        <div class="tab">
-            <button class="tablinks" onclick="openMenu(event, 'OriginTea')">OriginTea</button>
-            <button class="tablinks" onclick="openMenu(event, 'SweeTea')">SweeTea</button>
-            <button class="tablinks" onclick="openMenu(event, 'Tisane')">Tisane</button>
+        <div id="OriginTea" class="tabcontent">
+            <img src="Asset/oolong tea.png" alt="">
+            <h5>Oolong Tea</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
         </div>
 
-        <!-- TeavoU Product or Menu-->
-        <!-- MENU ORIGINTEA -->
-        <div class="menu">
-            <div id="OriginTea" class="tabcontent">
-                <img src="Asset/greentea.png" alt="">
-                <h5>Green Tea</h5>
-                <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
-                <button class="read" onclick="expandText(this)">Read More</button>
+        <div id="OriginTea" class="tabcontent">
+            <img src="Asset/white tea.png" alt="">
+            <h5>White Tea</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
             </div>
-
-            <div id="OriginTea" class="tabcontent">
-                <img src="Asset/oolong tea.png" alt="">
-                <h5>Oolong Tea</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-
-            <div id="OriginTea" class="tabcontent">
-                <img src="Asset/white tea.png" alt="">
-                <h5>White Tea</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-
-            <div id="OriginTea" class="tabcontent">
-                <img src="Asset/black tea.png" alt="">
-                <h5>Black Tea</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-
-            <div id="OriginTea" class="tabcontent">
-                <img src="Asset/greentea.png" alt="">
-                <h5>Green Tea</h5>
-                <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-
-            <div id="OriginTea" class="tabcontent">
-                <img src="Asset/oolong tea.png" alt="">
-                <h5>Oolong Tea</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-
-            <div id="OriginTea" class="tabcontent">
-                <img src="Asset/white tea.png" alt="">
-                <h5>White Tea</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-
-            <div id="OriginTea" class="tabcontent">
-                <img src="Asset/black tea.png" alt="">
-                <h5>Black Tea</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
         </div>
 
-        <!-- MENU SWEETEA -->
-        <div class="menu">
-            <div id="SweeTea" class="tabcontent">
-                <img src="Asset/tea 1.png" alt="">
-                <h5>Butterfly Pea Elixir</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
+        <div id="OriginTea" class="tabcontent">
+            <img src="Asset/black tea.png" alt="">
+            <h5>Black Tea</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
             </div>
-
-            <div id="SweeTea" class="tabcontent">
-                <img src="Asset/tea 2.png" alt="">
-                <h5>Blue Thai Tea</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-
-            <div id="SweeTea" class="tabcontent">
-                <img src="Asset/tea 3.png" alt="">
-                <h5>Alga on Ocean</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-
-            <div id="SweeTea" class="tabcontent">
-                <img src="Asset/tea 1.png" alt="">
-                <h5>Butterfly Pea Elixir</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-
-            <div id="SweeTea" class="tabcontent">
-                <img src="Asset/tea 2.png" alt="">
-                <h5>Blue Thai Tea</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-
-            <div id="SweeTea" class="tabcontent">
-                <img src="Asset/tea 3.png" alt="">
-                <h5>Alga on Ocean</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-            
-            <div id="SweeTea" class="tabcontent">
-                <img src="Asset/tea 1.png" alt="">
-                <h5>Butterfly Pea Elixir</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-
-            <div id="SweeTea" class="tabcontent">
-                <img src="Asset/tea 2.png" alt="">
-                <h5>Blue Thai Tea</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
-                </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
         </div>
 
-        <!-- MENU TISANE -->
-        <div class="menu">
+        <div id="OriginTea" class="tabcontent">
+            <img src="Asset/greentea.png" alt="">
+            <h5>Green Tea</h5>
+            <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
+            <button class="read" onclick="expandText(this)">Read More</button>
+        </div>
+
+        <div id="OriginTea" class="tabcontent">
+            <img src="Asset/oolong tea.png" alt="">
+            <h5>Oolong Tea</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
+        </div>
+
+        <div id="OriginTea" class="tabcontent">
+            <img src="Asset/white tea.png" alt="">
+            <h5>White Tea</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
+        </div>
+
+        <div id="OriginTea" class="tabcontent">
+            <img src="Asset/black tea.png" alt="">
+            <h5>Black Tea</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
+        </div>
+    </div>
+
+    <!-- MENU SWEETEA -->
+    <div class="menu" id="SweeTeaMenu">
+        <div id="SweeTea" class="tabcontent">
+            <img src="Asset/tea 1.png" alt="">
+            <h5>Butterfly Pea Elixir</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
+        </div>
+
+        <div id="SweeTea" class="tabcontent">
+            <img src="Asset/tea 2.png" alt="">
+            <h5>Blue Thai Tea</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
+        </div>
+
+        <div id="SweeTea" class="tabcontent">
+            <img src="Asset/tea 3.png" alt="">
+            <h5>Alga on Ocean</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
+        </div>
+
+        <div id="SweeTea" class="tabcontent">
+            <img src="Asset/tea 1.png" alt="">
+            <h5>Butterfly Pea Elixir</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
+        </div>
+
+        <div id="SweeTea" class="tabcontent">
+            <img src="Asset/tea 2.png" alt="">
+            <h5>Blue Thai Tea</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
+        </div>
+
+        <div id="SweeTea" class="tabcontent">
+            <img src="Asset/tea 3.png" alt="">
+            <h5>Alga on Ocean</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
+        </div>
+        
+        <div id="SweeTea" class="tabcontent">
+            <img src="Asset/tea 1.png" alt="">
+            <h5>Butterfly Pea Elixir</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
+        </div>
+
+        <div id="SweeTea" class="tabcontent">
+            <img src="Asset/tea 2.png" alt="">
+            <h5>Blue Thai Tea</h5>
+            <div class="text-wrapper">
+                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            </div>
+            <button class="read" onclick="expandText(this)">Read More</button>
+        </div>
+    </div>
+
+    <!-- MENU TISANE -->
+    <div class="menu" id="TisaneMenu">
             <div id="Tisane" class="tabcontent">
                 <img src="Asset/Chamomile Tea.png" alt="">
                 <h5>Chamomile Tea</h5>
@@ -298,8 +298,8 @@
                 </div>
                 <button class="read" onclick="expandText(this)">Read More</button>
             </div>
-        </div>
-    </section>
+    </div>
+</section>
 
     <!-- Feedback -->
     <section class="feedback">
