edit menu product

--- a/Product.html
+++ b/Product.html
@@ -234,7 +234,7 @@
             <div id="Tisane" class="tabcontent">
                 <img src="Asset/Chamomile Tea.png" alt="">
                 <h5>Chamomile Tea</h5>
-                <p class="truncate">Chamomile tea is known for its calming properties, promoting relaxation and aiding in sleep.</p>
+                <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
                 <button class="read" onclick="expandText(this)">Read More</button>
             </div>
 
@@ -242,7 +242,7 @@
                 <img src="Asset/Spearmint tea.png" alt="">
                 <h5>Spearmint Tea</h5>
                 <div class="text-wrapper">
-                    <p class="truncate expanded">Spearmint tea offers a refreshing taste and is believed to aid digestion while providing a burst of natural energy.</p>
+                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
                 </div>
                 <button class="read" onclick="expandText(this)">Read More</button>
             </div>
@@ -251,7 +251,7 @@
                 <img src="Asset/Moringa Tea.png" alt="">
                 <h5>Moringa Tea</h5>
                 <div class="text-wrapper">
-                    <p class="truncate expanded">Moringa tea is rich in antioxidants and nutrients, supporting overall well-being and potentially boosting the immune system</p>
+                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
                 </div>
                 <button class="read" onclick="expandText(this)">Read More</button>                
             </div>
@@ -260,7 +260,7 @@
                 <img src="Asset/Peppermint Tea.png" alt="">
                 <h5>Peppermint Tea</h5>
                 <div class="text-wrapper">
-                    <p class="truncate expanded">Peppermint tea is known for its soothing effect on the digestive system, helping to relieve indigestion and bloating.</p>
+                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
                 </div>
                 <button class="read" onclick="expandText(this)">Read More</button>
             </div>
@@ -268,7 +268,7 @@
             <div id="Tisane" class="tabcontent">
                 <img src="Asset/lemongrass.png" alt="">
                 <h5>Lemongrass Tea</h5>
-                <p class="truncate">Lemongrass tea is a citrusy herbal infusion that may assist in digestion and provide a sense of refreshment.</p>
+                <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
                 <button class="read" onclick="expandText(this)">Read More</button>
             </div>
             
@@ -276,7 +276,7 @@
                 <img src="Asset/rosella tea.png" alt="">
                 <h5>Rosella Tea</h5>
                 <div class="text-wrapper">
-                    <p class="truncate expanded">Rosella tea, made from hibiscus flowers, is high in vitamin C and antioxidants, contributing to heart health and immune support.</p>
+                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
                 </div>
                 <button class="read" onclick="expandText(this)">Read More</button>
             </div>
@@ -285,7 +285,7 @@
                 <img src="Asset/rosebud.png" alt="">
                 <h5>Rose Buds Tea</h5>
                 <div class="text-wrapper">
-                    <p class="truncate expanded">Rose buds tea is celebrated for its mild, floral flavor and potential benefits for skin health and stress reduction.</p>
+                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
                 </div>
                 <button class="read" onclick="expandText(this)">Read More</button>
             </div>
@@ -294,7 +294,7 @@
                 <img src="Asset/jasmine.png" alt="">
                 <h5>Jasmine Tea</h5>
                 <div class="text-wrapper">
-                    <p class="truncate expanded">Jasmine tea, fragrant and delicate, is thought to have calming properties and may aid in reducing stress and promoting relaxation.</p>
+                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
                 </div>
                 <button class="read" onclick="expandText(this)">Read More</button>
             </div>
