--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
     <!-- Links -->
     <ul class="navbar">
         <li class="active_nav"><a href="#Home">Home</a></li>
-        <li><a href="AboutUs.html">AboutUs</a></li>
+        <li><a href="AboutUs.html">About Us</a></li>
         <li><a href="Product.html">Product</a></li>
     </ul>
     </header>
@@ -299,15 +299,16 @@
         <div class="line"></div>
             <ul class="navbar-bawah">
                 <li><a href="#Home">Home</a></li>
-                <li><a href="AboutUs.html">AboutUs</a></li>
+                <li><a href="About Us.html">AboutUs</a></li>
                 <li><a href="Product.html">Product</a></li>
             </ul>
 
         <!-- social media -->
         <div class="social">
-            <!-- instagram -->
-            <!-- twitter -->
-            <!-- facebook -->
+            <h5>Social Media</h5>
+            <img src="Asset/instagram.svg" alt="instagram">
+            <img src="Asset/twitter.svg" alt="twitter">
+            <img src="Asset/facebook.svg" alt="facebook">
         </div>
     </div>
 </footer>
