Update About Us Page
Team font change and adjustment

--- a/About Us/trial/aboutrial.html
+++ b/About Us/trial/aboutrial.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutUs</title>
-    <link rel="stylesheet" href="About Us/AboutUsStyle.css">
-    <link rel="icon" href="Asset/Logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="aboutrial.css">
+    <link rel="icon" href="Asset\Logo.png" type="image/x-icon">
 </head>
 <body>
     <!-- NavBar Start -->
     <header>
         <!-- Insert Logo Company -->
         <a href="#" class="logo">
-            <img src="Asset/Logo.png" alt="logo">
+            <img src="Asset\Logo.png" alt="logo">
         </a>
 
         <!-- Menu Icon -->
@@ -21,7 +21,7 @@
         <!-- NavBar Links -->
         <ul class="navbar">
             <li><a href="Index.html">Home</a></li>
-            <li class="active_nav"><a href="AboutUs.html">About Us</a></li>
+            <li class="active_nav"><a href="aboutrial.html">About Us</a></li>
             <li><a href="Product.html">Product</a></li>
         </ul>
     </header>
