--- a/AboutUs.html
+++ b/AboutUs.html
@@ -102,17 +102,34 @@
     <section class="TeavoUTeam" id="TeavoUTeam">
         <h4><span>TeavoU</span> Team</h4>
         <div class="TeavoUTeamcard">
-            <div><img src="Asset/team azzizah.png" alt="">Nur Azzizah
+            <div class="team-set">
+                <img src="Asset/team azzizah.png" alt="">
+                <p class="team-name"> Nur Azzizah</p>
             </div>
-            <div><img src="Asset/team fadhel.png" alt="">Akhmad Fadhel
+            
+            <div class="team-set">
+                <img src="Asset/team fadhel.png" alt="">
+                <p>Akhmad Fadhel</p>
             </div>
-            <div><img src="Asset/team nisrina.png" alt="">Nisrina Nurhasna
+
+            <div class="team-set">
+                <img src="Asset/team nisrina.png" alt="">
+                <p>Nisrina Nurhasna</p>
             </div>
-            <div><img src="Asset/team diah.png" alt="">I Gusti Agung Diah<br>Arishma Okayani
+
+            <div class="team-set">
+                <img src="Asset/team diah.png" alt="">
+                <p>I Gusti Agung Diah Arishma Okayani</p>
             </div>
-            <div><img src="Asset/team rifqi.png" alt="">Rifqi Nur Permadi
+
+            <div class="team-set">
+                <img src="Asset/team rifqi.png" alt="">
+                <p>Rifqi Nur Permadi</p>
             </div>
-            <div><img src="Asset/team balqis.png" alt="">Balqis Ramadhillah
+
+            <div class="team-set">
+                <img src="Asset/team balqis.png" alt="">
+                <p>Balqis Ramadhillah</p>
             </div>
         </div>
     </section>
