update menu teavou

--- a/Product.html
+++ b/Product.html
@@ -120,15 +120,15 @@
         </div>
 
         <div id="OriginTea" class="tabcontent">
-            <img src="Asset/greentea.png" alt="">
-            <h5>Green Tea</h5>
+            <img src="Asset/geinmaicha.png" alt="">
+            <h5>Genmaicha</h5>
             <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
             <button class="read" onclick="expandText(this)">Read More</button>
         </div>
 
         <div id="OriginTea" class="tabcontent">
-            <img src="Asset/oolong tea.png" alt="">
-            <h5>Oolong Tea</h5>
+            <img src="Asset/earl-grey.png" alt="">
+            <h5>Earl Grey</h5>
             <div class="text-wrapper">
                 <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
             </div>
@@ -136,8 +136,8 @@
         </div>
 
         <div id="OriginTea" class="tabcontent">
-            <img src="Asset/white tea.png" alt="">
-            <h5>White Tea</h5>
+            <img src="Asset/pu-erh.png" alt="">
+            <h5>Pu-erh Tea</h5>
             <div class="text-wrapper">
                 <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
             </div>
@@ -145,8 +145,8 @@
         </div>
 
         <div id="OriginTea" class="tabcontent">
-            <img src="Asset/black tea.png" alt="">
-            <h5>Black Tea</h5>
+            <img src="Asset/masala-chai.png" alt="">
+            <h5>Masala Chai Tea</h5>
             <div class="text-wrapper">
                 <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
             </div>
@@ -184,8 +184,8 @@
         </div>
 
         <div id="SweeTea" class="tabcontent">
-            <img src="Asset/tea 1.png" alt="">
-            <h5>Butterfly Pea Elixir</h5>
+            <img src="Asset/matcha-bobs.png" alt="">
+            <h5>Matcha Boba</h5>
             <div class="text-wrapper">
                 <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
             </div>
@@ -193,8 +193,8 @@
         </div>
 
         <div id="SweeTea" class="tabcontent">
-            <img src="Asset/tea 2.png" alt="">
-            <h5>Blue Thai Tea</h5>
+            <img src="Asset/taiwan-milk-tea.png" alt="">
+            <h5>Taiwan Milk Tea</h5>
             <div class="text-wrapper">
                 <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
             </div>
@@ -202,8 +202,8 @@
         </div>
 
         <div id="SweeTea" class="tabcontent">
-            <img src="Asset/tea 3.png" alt="">
-            <h5>Alga on Ocean</h5>
+            <img src="Asset/rose-matcha.png" alt="">
+            <h5>Rose Matcha</h5>
             <div class="text-wrapper">
                 <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
             </div>
@@ -211,8 +211,8 @@
         </div>
         
         <div id="SweeTea" class="tabcontent">
-            <img src="Asset/tea 1.png" alt="">
-            <h5>Butterfly Pea Elixir</h5>
+            <img src="Asset/taro-boba.png" alt="">
+            <h5>Taro Boba Tea</h5>
             <div class="text-wrapper">
                 <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
             </div>
@@ -220,8 +220,8 @@
         </div>
 
         <div id="SweeTea" class="tabcontent">
-            <img src="Asset/tea 2.png" alt="">
-            <h5>Blue Thai Tea</h5>
+            <img src="Asset/butterfly-pea-boba.png" alt="">
+            <h5>Butterfly Pea Boba</h5>
             <div class="text-wrapper">
                 <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
             </div>
