Update buttons navigate page

--- a/Product.html
+++ b/Product.html
@@ -62,9 +62,9 @@
 
         <!-- 3 buttons navigate on product page -->
         <div class="buttons">
-            <button class="but"><img src="Asset/image deskripsi teh.svg" alt="">What is TeavoU?</button>
-            <button class="but"><img src="Asset/image sejarah tea.svg" alt="">History of Tea</button>
-            <button class="but"><img src="Asset/image khasiat tea.svg" alt="">TeavoU Product</button>
+            <button onclick="topFunction()" id="scroll-up" title="Top"><img src="Asset/image deskripsi teh.svg" alt="">What is TeavoU?</button>
+            <a href="history.html"><button class="but"><img src="Asset/image sejarah tea.svg" alt="">History of Tea</button></a>
+            <button onclick="bottomFunction()" id="scroll-down" title="Bottom"><img src="Asset/image khasiat tea.svg" alt="">TeavoU Product</button>
         </div>
    </section>
     <!-- Section Description "What is TeavoU?" END -->
