--- a/history.html
+++ b/history.html
@@ -20,7 +20,7 @@
 
       <!-- navbar links -->
       <ul class="navbar">
-          <li><a href="Home.html">Home</a></li>
+          <li><a href="Index.html">Home</a></li>
           <li><a href="AboutUs.html">About Us</a></li>
           <!-- <li class="active_nav"><a href="Product.html">Product</a></li> -->
           <li><a href="Product.html">Product</a></li>
@@ -59,7 +59,7 @@
         <!--History1 Section -->
         <section class="history-sections">
           <div class="history-sections__container">
-            <img src="Asset/history_sejarah1.png" alt="The Magical Beginning" />
+            <img src="Asset/history_sejarah1.png" alt="The Magical Beginning" id="imgHistory1" />
             <div class="history-layout">
               <svg xmlns="http://www.w3.org/2000/svg" width="120" height="2" viewBox="0 0 157 3" fill="none" gap="23">
                   <path d="M0 1.5H157" stroke="grey" stroke-width="2"/>
@@ -97,7 +97,7 @@
     <!--TeavoU Section -->
     <section class="teavou-sections">
         <div class="teavou-sections__container">
-          <img src="Asset/history_img4.png" alt="History of Tea" />
+          <img src="Asset/history_img4.png" alt="History of Tea" id="teavou-1"/>
           <div class="teavou-layout">
             <svg xmlns="http://www.w3.org/2000/svg" width="157" height="3" viewBox="0 0 157 3" fill="none" gap="23">
                 <path d="M0 1.5H157" stroke="white" stroke-width="2"/>
@@ -108,12 +108,52 @@
         </div>
     </section>
 
-        <!-- Footer -->
-        <footer>
-            <div class="">
-              <img src="Asset/Logo.png" alt="Logo" />
-            </div>
-          </footer>
-          <!-- Footer -->
-        </body>
-      </html>
+    <footer>
+      <div class="bg-fo">
+          <img src="Asset/whiteLogo.svg" alt="wh-lo">
+  
+          <div class="element-fo">
+              <!-- alamat -->
+              <div class="alamat">
+                  <img src="Asset/map.svg" alt="">
+                  <h5>Jl.Cenderawasih No3, Mrican Caturtunggal</h5>
+              </div>
+  
+              <!-- email -->
+              <div class="email">
+                  <img src="Asset/mail.svg" alt="">
+                  <h5>teavou@gmail.com</h5>
+              </div>
+  
+              <!-- call -->
+              <div class="call">
+                  <img src="Asset/Vector.svg" alt="">
+                  <h5>(355) 973-9235</h5>
+              </div>
+          </div>
+  
+              <!-- Line navbar -->
+          <div class="line"></div>
+              <ul class="navbar-bawah">
+                  <li><a href="#Home">Home</a></li>
+                  <li><a href="About Us.html">AboutUs</a></li>
+                  <li><a href="Product.html">Product</a></li>
+              </ul>
+  
+          <!-- social media -->
+          <!-- <div class="social">
+              <h5>Social Media</h5>
+              <img src="Asset/instagram.svg" alt="instagram">
+              <img src="Asset/twitter.svg" alt="twitter">
+              <img src="Asset/facebook.svg" alt="facebook">
+          </div> -->
+      </div>
+  </footer>
+      
+      
+  
+  
+      <!-- Link JS -->
+      <script src="History/history.js"></script>
+  </body>
+  </html>
