--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
     <!-- Tab content -->
     <div id="tea1" class="tabcontent">
-        <img src="Asset/tea 1.png" alt="">
+        <img src="Asset/IconQuiz.png" alt="">
         <div class="box">
             <h4>SweeTea</h4>
             <br>
