update people home

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <div class="card-spill" id="feedbacks-container">
 
                 <div class="card-body">
-                    <img src="Asset/people1.svg" alt="Image 1">
+                    <img src="Asset/people1.png" alt="Image 1">
                     <h6>Saka</h6>
                     <div class="text-card">
                         <p>
@@ -204,7 +204,7 @@
                 </div>
 
                                 <div class="card-body">
-                    <img src="Asset/people2.svg">
+                    <img src="Asset/people2.png">
                     <h6>Naka</h6>
                     <div class="text-card">
                         <p>
@@ -225,7 +225,7 @@
                 </div>
 
                 <div class="card-body">
-                <img src="Asset/people3.svg" alt="Image 1">
+                <img src="Asset/people3.png" alt="Image 1">
                 <h6>Jacobi</h6>
                 <div class="text-card">
                     <p>
@@ -251,7 +251,7 @@
         <div class="slide_spill">
             <div class="card-spill" id="feedbacks-container2">
                 <div class="card-body">
-                    <img src="Asset/people4.svg" alt="Image 1">
+                    <img src="Asset/people4.png" alt="Image 1">
                     <h6>Carly</h6>
                     <div class="text-card">
                         <p>
@@ -272,7 +272,7 @@
                 </div>
 
                 <div class="card-body">
-                <img src="Asset/people5.svg" alt="Image 1">
+                <img src="Asset/people5.png" alt="Image 1">
                 <h6>Calista</h6>
                 <div class="text-card">
                     <p>
@@ -292,7 +292,7 @@
             </div>
 
                 <div class="card-body">
-                <img src="Asset/people6.svg" alt="Image 1">
+                <img src="Asset/people6.png" alt="Image 1">
                 <h6>Mayasari</h6>
                 <div class="text-card">
                     <p>
@@ -315,7 +315,7 @@
         <div class="slide_spill">
             <div class="card-spill">
                 <div class="card-body">
-                    <img src="Asset/people7.svg" alt="Image 1">
+                    <img src="Asset/people7.png" alt="Image 1">
                     <h6>Elise</h6>
                     <div class="text-card">
                         <p>
@@ -335,7 +335,7 @@
                 </div>
                 
                 <div class="card-body">
-                    <img src="Asset/people8.svg" alt="Image 1">
+                    <img src="Asset/people8.png" alt="Image 1">
                     <h6>Ivanov</h6>
                     <div class="text-card">
                         <p>
@@ -355,7 +355,7 @@
                 </div>
                 
                 <div class="card-body">
-                    <img src="Asset/people9.svg" alt="Image 1">
+                    <img src="Asset/people9.png" alt="Image 1">
                     <h6>Johansson</h6>
                     <div class="text-card">
                         <p>
