update asset home2

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="slideshow">
             <div class="slide">
-                <img src="Asset/OriginTeaBest.svg" alt="Image 3">
+                <img src="Asset/OriginTeaBest.png" alt="Image 3">
             </div>
             <div class="slide">
                 <img src="Asset/GreenTeaBest.svg" alt="Image 4">
