--- a/history.html
+++ b/history.html
@@ -38,7 +38,7 @@
 
     <!-- BG Top Section -->
     <section class="bg-sections">
-        <img src="Asset/history_img1.png" alt="Tea Story" />
+        <img src="Asset/history_img1.jpg" alt="Tea Story" />
  
      <!-- 3 buttons navigate on product page -->
     <div class="buttons">
