--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <!-- Tea Festival -->
 <section class="festival">
-    <img src="Asset/TeaVestival.svg" alt="event">
+    <img src="Asset/TeaVestival.png" alt="event">
     <div class="textFestival">
     <h3>Tea Festival</h3>
     <h5>Sunday 20 August</h5>
@@ -132,7 +132,7 @@
 
     <!-- Tab content -->
     <div id="tea1" class="tabcontent">
-        <img src="Asset/QuizL1.svg" alt="">
+        <img src="Asset/QuizL1.png" alt="">
         <div class="box">
             <h4>SweeTea</h4>
             <br>
@@ -142,7 +142,7 @@
     </div>
 
     <div id="tea2" class="tabcontent">
-        <img src="Asset/QuizL2.svg" alt="">
+        <img src="Asset/QuizL2.png" alt="">
         <div class="box">
         <h4>Blue Thai Tea</h4>
         <br>
@@ -152,7 +152,7 @@
     </div>
 
     <div id="tea3" class="tabcontent">
-        <img src="Asset/QuizL3.svg" alt="">
+        <img src="Asset/QuizL3.png" alt="">
         <div class="box">
         <h4>Alga on Ocean</h4>
         <br>
