--- a/index.html
+++ b/index.html
@@ -396,59 +396,57 @@
 
 </main>
 
-<!-- Footer -->
+<!-- Section Footer START -->
 <footer class="footer">
-        <div class="footer-left">
-            <div class="credit-cards">
-                <img src="Asset/whiteLogo.svg" alt="">
+    <div class="footer-left">
+        <div class="credit-cards">
+            <img src="Asset/whiteLogo.svg" alt="">
 
-                <div class="footer-media">
-                    <a href="#" class="instagram"><img src="Asset/instagram.svg" alt=""></a>
-                    <a href="#" class="twitter"><img src="Asset/twitter.svg" alt=""></a>
-                    <a href="#" class="facebook"><img src="Asset/facebook.svg" alt=""></a>
-                    <a href="#" class="youtube"><img src="Asset/youtube.svg" alt=""></a>
-                    <!-- masukin media social what's up -->
-                </div>
+            <div class="footer-media">
+                <a href="#" class="instagram"><img src="Asset/instagram.svg" alt=""></a>
+                <a href="#" class="twitter"><img src="Asset/twitter.svg" alt=""></a>
+                <a href="#" class="facebook"><img src="Asset/facebook.svg" alt=""></a>
+                <a href="#" class="youtube"><img src="Asset/youtube.svg" alt=""></a>
             </div>
         </div>
+    </div>
 
-        <div class="footer-center">
-            <div class="location">
-                <img src="Asset/location.svg" alt="">
-                <p><a href="#"><span>Indonesia</span> DKI Jakarta, Jakarta Selatan</a></p>
-            </div>
-
-            <div class="phone">
-                <img src="Asset/phone.svg" alt="">
-                <p><a href="#">+62 812-3456-7890</a></p>
-            </div>
-
-            <div class="mail">
-                <img src="Asset/mail.svg" alt="">
-                <p><a href="#">support@gmail.com</a></p>
-            </div>
+    <div class="footer-center">
+        <div class="location">
+            <img src="Asset/location.svg" alt="">
+            <p><a href="#"><span>Indonesia</span> DKI Jakarta, Jakarta Selatan</a></p>
         </div>
 
-        <div class="footer-right">
-            <p class="footer-about">
-                <span>About</span>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis.
-            </p>
+        <div class="phone">
+            <img src="Asset/phone.svg" alt="">
+            <p><a href="#">+62 812-3456-7890</a></p>
         </div>
 
-        <!-- Line navbar -->
-        <div class="line"></div>
-
-        <!-- Copyright -->
-        <div id="copyright">
-            <div class="wrapper">
-                &copy; 2023. <b>TeavoU</b> All Right Reserved.
-            </div>
+        <div class="mail">
+            <img src="Asset/mail.svg" alt="">
+            <p><a href="#">support@gmail.com</a></p>
         </div>
-    </footer>
+    </div>
+
+    <div class="footer-right">
+        <p class="footer-about">
+            <span>About</span>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis.
+        </p>
+    </div>
+
+    <!-- Line navbar -->
+    <div class="line"></div>
+
+    <!-- Copyright -->
+    <div id="copyright">
+        <div class="wrapper">
+            &copy; 2023. <b>TeavoU</b> All Right Reserved.
+        </div>
+    </div>
+</footer>
+<!-- Section Footer END -->
     
-    
-
 
     <!-- Link JS -->
     <script src="Home/HomeJS.js"></script>
