--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,18 +10,17 @@
 <body>
     <!-- NavBar Start -->
     <header>
-        <!-- Insert Logo Company -->
         <a href="#" class="logo">
-            <img src="Asset/Logo.png" alt="logo">
+            <img src="Asset/Logo.png" alt="">
         </a>
-
+    
         <!-- Menu Icon -->
         <i class="menu" id="menu-icon"><img src="Asset/menu.svg" alt=""></i>
-
-        <!-- NavBar Links -->
+    
+        <!-- Links -->
         <ul class="navbar">
-            <li><a href="Index.html">Home</a></li>
-            <li class="active_nav"><a href="AboutUs.html">About Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active_nav"><a href="#">About Us</a></li>
             <li><a href="Product.html">Product</a></li>
         </ul>
     </header>
