--- a/Product.html
+++ b/Product.html
@@ -11,22 +11,21 @@
 <body>  
     <!-- NavBar Start -->
     <header>
-        <!-- insert logo -->
         <a href="#" class="logo">
-            <img src="Asset/Logo.png" alt="logo">
+            <img src="Asset/Logo.png" alt="">
         </a>
-
-        <!-- menu icon -->
+    
+        <!-- Menu Icon -->
         <i class="menu" id="menu-icon"><img src="Asset/menu.svg" alt=""></i>
-
-        <!-- navbar links -->
+    
+        <!-- Links -->
         <ul class="navbar">
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="AboutUs.html">About Us</a></li>
-            <li class="active_nav"><a href="Product.html">Product</a></li>
+            <li class="active_nav"><a href="#">Product</a></li>
         </ul>
     </header>
-        <!-- NavBar END -->
+    <!-- NavBar End -->
 
     <!-- Section Description "What is TeavoU?" START -->
    <section class="desc" id="desc">
