--- a/Product.html
+++ b/Product.html
@@ -86,9 +86,10 @@
     <!-- MENU ORIGINTEA -->
     <div class="menu" id="OriginTeaMenu">
         <div id="OriginTea" class="tabcontent">
+            <div id="discount"><img src="Asset/TagDiscount.png" alt=""></div>
             <img src="Asset/greentea.png" alt="">
             <h5>Green Tea</h5>
-            <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
+            <p class="truncate">Green Tea, Health Infused with Every Breath</p>
             <button class="read" onclick="expandText(this)">Read More</button>
         </div>
 
