--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         </p>
 
                     </div>
-
+<!-- bintang -->
                     <div class="Bintang">
                         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                         <span class="fa fa-star checked"></span>
